# Henchman

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  prompts.toml
deployment/: README.md
deployment/docker/build-image/: custom-image-build.sh
enclave/: README.md
enclave/docker/build-image/: Dockerfile  custom-image-build.sh
enclave/docker/run-enclave/: docker-compose.yml  official-container-run.sh
enclave/gramine/: Makefile  dev_tee_ai_agent.manifest.template  tee_ai_agent.manifest.template
enclave/gramine/trusted/: update-trusted.sh
src/: agent.rs  config.rs  db.rs  encumber.rs  env.rs  main.rs  pipeline.rs  prompts.rs  release_credentials.rs  twitter.rs
src/attestation/: mod.rs  ra.rs  server.rs
src/db/: mod.rs  types.rs
src/hyperbolic/: api_types.rs  mod.rs
src/openai/: api_types.rs  mod.rs
src/twitter/: api_types.rs  mod.rs
