[package]
name = "tee_ai_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = {version = "1.0.214", features = ["derive"]}
tokio = {version = "1.41.0", features = ["time", "macros"]}
toml = "0.8.19"
reqwest = { version = "0.12", features = ["json"]}
reqwest-oauth1 = "0.3"
tokio = { version = "1.41", features = ["full", "tracing"] }
anyhow = "1"
serde_json = "1"
