[package]
name = "tee_ai_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = {version = "1.0.214", features = ["derive"]}
tokio = {version = "1.41.0", features = ["time", "macros", "rt-multi-thread"]}
toml = "0.8.19"
reqwest = { version = "0.12", features = ["json"]}
reqwest-oauth1 = "0.3"
anyhow = "1"
serde_json = "1"
qdrant-client = "1.12.1"
uuid = { version = "1.11", features = ["v4"] }
fasthash = "0.4"
rocksdb = "0.22"
ethsign = "0.9.0"
bincode = "1.3.3"
aho-corasick = "1.1.3"
