[package]
name = "tee_ai_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["time", "macros", "rt-multi-thread"] }
toml = "0.8.19"
reqwest = { version = "0.12", features = ["json"] }
reqwest-oauth1 = "0.3"
anyhow = "1"
serde_json = "1"
qdrant-client = { version = "1.12.1", default-features = false, features = ["download_snapshots", "serde"]}
uuid = { version = "1.11", features = ["v4"] }
fasthash = "0.4"
rocksdb = "0.22"
ethsign = "0.9.0"
bincode = "1.3.3"
axum = "0.7.2"
tower-http = { version = "0.5.0", features = ["cors"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
tracing = "0.1.37"
base64 = "0.21.7"
aho-corasick = "1.1.3"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }
